Remove val
- Removed all usages of 'val' in the Localization system. I find it easier to use the actual types.